--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'java-library'
+apply plugin: 'jacoco'
 apply plugin: 'maven-publish'
 
 
